--- a/counter_app/pubspec.yaml
+++ b/counter_app/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.4
  
 
-dev_dependencies:
+dev_dependencies:1
   flutter_test:
     sdk: flutter
 
